--- a/app/src/main/res/layout/activity_listar.xml
+++ b/app/src/main/res/layout/activity_listar.xml
@@ -27,19 +27,19 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Descripcion" />
+                android:text="@string/descripcion" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Datos" />
+                android:text="@string/datos" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Resultado" />
+                android:text="@string/resultado" />
         </TableRow>
     </TableLayout>
 </LinearLayout>
